<resources>
    <string name="app_name">Patientix</string>


    <string name="ueberschrift">Patientenaufklärung für</string>
    <string name="update">Aktualisieren</string>
    <string name="start">Start</string>
    <string name="patientname"></string>
    <string name="patientid"></string>
    <string name="title_activity_form">FormActivity</string>
    <string name="title">Patientenaufklärung für</string>

    <string name="buttonContinue">Weiter</string>
    <string name="buttonBack">Zurück</string>
    <string name="buttonZoomOut">-</string>
    <string name="buttonZoomIn" >+</string>

    <string name="title_activity_overview">OverviewActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="test">test</string>
    <string name="buttonReady">Weiter</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="editName">Name</string>
    <string name="editPassword">Passwort</string>
    <string name="textLogin">Bitte einloggen</string>
    <string name="buttonLogin">Login</string>
    <string name="title_activity_start">StartActivity</string>

    <string name="title_activity_signature"/>
    <string name="action_settings">Settings</string>
    <string name="description" translatable="false">ImageView</string>
    <string name="textSignature">Bitte unterschreiben Sie im vorgegebenen Feld:</string>
    <string name="buttonOverview">OK</string>
    <string name="buttonOk">OK</string>
    <string name="buttonDone">Fertig</string>
    <string name="title_activity_end">EndActivity</string>

    <string name="textEnd">Bitte bringen Sie das Tablet zurück an den Empfang.</string>
    <string name="textExamination"></string>

    <string name="hello_world">Hello world!</string>
    <string name="textZoom">Schrift zu klein?</string>
    <string name="textOverview">Übersicht aller Fragen</string>
    <string name="title_activity_doc_overview">DocOverviewActivity</string>

    <string name="buttonHelp">Hilfe</string>

</resources>
