<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginMtra"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/startseiteapp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.teambluebaer.patientix.activities.LoginActivity">


    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editPassword"
        android:layout_below="@+id/textView"
        android:layout_marginTop="99dp"
        android:ems="10"
        android:hint="@string/editName"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:hint="@string/editPassword"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/textLogin"
        android:textColor="#000000"
        android:textSize="50sp" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="210dip"
        android:layout_height="70dip"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editPassword"
        android:layout_marginBottom="72dp"
        android:background="@drawable/button1x3normal"
        android:onClick="onClickLoginButton"
        android:text="@string/buttonLogin"
        android:textColor="#fffafa"
        android:textSize="40sp" />

</RelativeLayout>
