<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/startseiteapp"
    android:keepScreenOn="true">

    <!-- Title: Patientenaufklärung für -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/title"
        android:gravity="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_below="@+id/updatebtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp" />

    <!-- Update Button -->
    <Button

        android:text="@string/update"
        android:layout_width="380dip"
        android:layout_height="70dip"
        android:id="@+id/updatebtn"
        android:textSize="40sp"
        android:layout_marginTop="61dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button1x5normal"
        android:padding="1dp" />

    <!-- Start Button -->
    <Button
        android:layout_width="180dip"
        android:layout_height="60dip"
        android:id="@+id/startbtn"
        android:textSize="40sp"
        android:background="@drawable/button1x3normal"
        android:layout_below="@+id/patientid"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:text="Start"
        android:clickable="true"
        android:padding="1dp" />

    <!-- Patient textfield -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/patientname"
        android:id="@+id/patientname"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:textSize="40sp"/>

    <!-- Patient ID field-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/patientid"
        android:id="@+id/patientid"
        android:layout_below="@+id/patientname"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:layout_marginTop="80dp" />

</RelativeLayout>
