<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:keepScreenOn="true"
    android:background="#ffffffff">

    <!-- Banner in the right corner bottom -->
    <LinearLayout
        android:layout_width="500dip"
        android:layout_height="fill_parent"
        android:gravity="left"
        android:background="@drawable/bannerklein"
        android:id="@+id/linearLayoutBannerLeft"
        android:orientation="horizontal">
    </LinearLayout>

    <!-- Banner left -->
    <LinearLayout
        android:layout_width="220dip"
        android:layout_height="220dip"
        android:gravity="right"
        android:background="@drawable/right"
        android:layout_alignBottom="@+id/linearLayoutBannerLeft"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayoutAdditionRight"
        android:orientation="horizontal">
    </LinearLayout>

    <!-- UMM Logo in the right corner -->
    <ImageView
        android:layout_width="600px"
        android:layout_height="211px"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/linearLayoutAdditionRight"
        android:src="@drawable/ummlogoklein" />

    <!-- Update Button -->
    <Button
        android:text="@string/update"
        android:layout_width="380dip"
        android:layout_height="70dip"
        android:id="@+id/buttonUpdate"
        android:textSize="40sp"
        android:layout_marginTop="61dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button1x5normal"
        android:padding="1dp"
        android:textColor="#fffafa"
        android:onClick="onClickUpdateButton"/>

    <!-- Start Button -->
    <Button
        android:layout_width="180dip"
        android:layout_height="60dip"
        android:id="@+id/buttonStart"
        android:textSize="40sp"
        android:background="@drawable/button1x3normal"
        android:text="Start"
        android:visibility="invisible"
        android:clickable="false"
        android:padding="1dp"
        android:textColor="#fffafa"
        android:onClick="onClickStartButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="63dp" />

    <!-- Patient textfield -->
    <TextView
        android:layout_width="850dip"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/patientname"
        android:id="@+id/textViewPatientName"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="40sp"
        android:gravity="center" />

    <!-- Patient ID field-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/patientid"
        android:id="@+id/textViewPatientBirthDate"
        android:textSize="40sp"
        android:layout_below="@+id/textViewPatientName"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="20dp" />

    <!-- Examination field -->
    <TextView
        android:layout_width="850dip"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textExamination"
        android:id="@+id/textViewExamination"
        android:layout_below="@+id/textViewPatientBirthDate"
        android:gravity="center"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <!-- Title: Patientenaufklärung für -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/title"
        android:gravity="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_below="@+id/buttonUpdate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        />

</RelativeLayout>
