<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    tools:context="de.teambluebaer.patientix.activities.FormActivity">


    <!-- Continue Button -->
    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="210dip"
        android:layout_height="70dip"
        android:layout_alignBottom="@+id/pageOfNumbers"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="108dp"
        android:background="@drawable/button1x3normal"
        android:onClick="onClickNextButton"
        android:text="@string/buttonContinue"
        android:textColor="#fffafa"
        android:textSize="40sp"
        android:visibility="visible" />


    <!-- Back Button -->
    <Button
        android:id="@+id/buttonBack"
        android:layout_width="210dip"
        android:layout_height="70dip"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="92dp"
        android:layout_toEndOf="@+id/imageViewLeftSide"
        android:background="@drawable/button1x3normal"
        android:onClick="onClickBackButton"
        android:text="@string/buttonBack"
        android:textColor="#fffafa"
        android:textSize="40sp" />

    <Button
        android:id="@+id/buttonZoomIn"
        android:layout_width="70dip"
        android:layout_height="70dip"
        android:layout_alignStart="@+id/buttonZoomOut"
        android:layout_alignTop="@+id/buttonZoomOut"
        android:background="@drawable/button1x1normal"
        android:onClick="onClickZoomButton"
        android:text="@string/buttonZoomIn"
        android:textColor="#fffafa"
        android:textSize="50sp" />

    <Button
        android:id="@+id/buttonZoomOut"
        android:layout_width="70dip"
        android:layout_height="70dip"
        android:layout_alignParentTop="true"
        android:background="@drawable/button1x1normal"
        android:onClick="onClickZoomButton"
        android:text="@string/buttonZoomOut"
        android:textColor="#fffafa"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/pageOfNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="178dp"
        android:layout_toStartOf="@+id/buttonContinue"
        android:text="Page"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textIsSelectable="false" />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="210dip"
        android:layout_height="70dip"
        android:layout_alignTop="@+id/buttonContinue"
        android:layout_toEndOf="@+id/pageOfNumbers"
        android:background="@drawable/button1x3normal"
        android:clickable="false"
        android:onClick="onClickButton"
        android:text="@string/buttonOk"
        android:textColor="#fffafa"
        android:textSize="40sp" />

    <ScrollView
        android:id="@+id/ScrollViewOverview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/imageViewLeftSide"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageViewLogo"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/imageViewLeftSide"
            android:layout_alignEnd="@+id/imageViewLogo"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageViewLogo"
            android:clickable="false"
            android:orientation="vertical"
            android:visibility="visible"></LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageViewLeftSide"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/left" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="262dp"
        android:layout_height="95dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        android:src="@drawable/ummlogoklein" />

</RelativeLayout>